--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noImplicitAny": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["vitest/globals"]
   },
   "exclude": [
     "node_modules",
