--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "build-fast": "tsup src/index.ts --format cjs,esm",
     "build": "pnpm run build-fast -- --dts-resolve",
     "test": "vitest run",
+    "lint": "eslint",
     "release": "bumpp package.json --commit --push --tag && pnpm publish --access public",
     "prepublishOnly": "pnpm run build"
   },
+  "dependencies": {
+    "throttle-debounce": "3.0.1"
+  },
   "devDependencies": {
-    "@m9ch/eslint-config-all": "^0.2.2",
-    "eslint": "^8.15.0",
+    "@m9ch/eslint-config-all": "^0.3.0",
+    "@types/throttle-debounce": "^5.0.0",
+    "eslint": "^8.26.0",
+    "throttle-debounce": "3.0.1",
     "tsup": "5.12.7",
-    "typedoc": "^0.22.15",
-    "typescript": "4.6.4",
-    "vite": "2.9.9",
-    "vitest": "0.12.6"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3"
   },
   "tsup": {
     "format": [
