--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-.idea
-.docz
-.DS_Store
-.cache
-dist
-
+### Node template
 # Logs
 logs
 *.log
@@ -60,5 +55,26 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
 # next.js build output
 .next
+
+# nuxt.js build output
+.nuxt
+
+# Nuxt generate
+dist
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# IDE
+.idea
