--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
   "name": "@m9ch/utils",
+  "type": "module",
   "version": "0.3.1",
   "description": "Collection of common JavaScript / TypeScript utils",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "exports": {
-    "require": "./dist/index.js",
-    "import": "./dist/index.mjs"
-  },
-  "types": "./dist/index.d.ts",
   "scripts": {
-    "build-fast": "tsup src/index.ts --format cjs,esm",
-    "build": "pnpm run build-fast -- --dts-resolve",
-    "test": "vitest run",
-    "lint": "eslint",
-    "release": "bumpp package.json --commit --push --tag && pnpm publish --access public",
-    "prepublishOnly": "pnpm run build"
-  },
-  "dependencies": {
-    "throttle-debounce": "3.0.1"
+    "build": "rollup -c",
+    "dev": "pnpm run build --watch",
+    "lint": "eslint .",
+    "prepublishOnly": "npm run build",
+    "release": "bumpp --commit --push --tag && npm publish",
+    "start": "esno src/index.ts",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest"
   },
   "devDependencies": {
     "@m9ch/eslint-config-all": "^0.3.0",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@types/node": "^20.5.0",
     "@types/throttle-debounce": "^5.0.0",
-    "eslint": "^8.26.0",
-    "throttle-debounce": "3.0.1",
-    "tsup": "5.12.7",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8",
-    "vitest": "^0.24.3"
-  },
-  "tsup": {
-    "format": [
-      "cjs",
-      "esm"
-    ],
-    "dts": true,
-    "clean": true
-  },
-  "publishConfig": {
-    "access": "public"
+    "bumpp": "^9.1.1",
+    "eslint": "^8.47.0",
+    "esno": "^0.17.0",
+    "rollup": "^3.28.0",
+    "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "throttle-debounce": "5.0.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.1"
   }
 }
